--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                 <div class="title">
                     <h1>Dedicated only for</h1>
                     <h3 class="name">Dilla</h3>
-                    <img src="/Dilla/Image/cloud.png" class="cloud-1" alt="Cloud-img">
-                    <img src="/Dilla/Image/Plane-noBG.png" class="plane" alt="Plane-img">
-                    <img src="/Dilla/Image/cloud.png" class="cloud-2" alt="Clodu-img">
-                    <img src="/Dilla/Image/cloud.png" class="cloud-3" alt="Clodu-img">
+                    <img src="cloud.png" class="cloud-1" alt="Cloud-img">
+                    <img src="Plane-noBG.png" class="plane" alt="Plane-img">
+                    <img src="cloud.png" class="cloud-2" alt="Clodu-img">
+                    <img src="cloud.png" class="cloud-3" alt="Clodu-img">
                 </div>
             </div>
 
             <div class="row body">
                 <div class="col-lg-12">
-                    <img src="/Dilla/Image/Kuriyama-smile.gif" alt="kuriyama-gif">
+                    <img src="Kuriyama-smile.gif" alt="kuriyama-gif">
                     <h3 class="greetings">Happy 22 Years old!</h3>
                     <p class="level">and Happy level-up! ╰(*°▽°*)╯</p>
                 </div>
@@ -47,10 +47,10 @@
                     <h1 class="name">Swipe to right 👉</h1>
                   </div>
                   <div class="carousel-item carousel">
-                    <img src="/Dilla/Image/World-is-just-U.jpg" class="d-block img" alt="just-U-img">
+                    <img src="World-is-just-U.jpg" class="d-block img" alt="just-U-img">
                   </div>
                   <div class="carousel-item carousel">
-                    <img src="/Dilla/Image/in-love.gif" class="d-block img" alt="Luv-U-img">
+                    <img src="in-love.gif" class="d-block img" alt="Luv-U-img">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -65,9 +65,9 @@
 
             <div class="footer text-center">
                 <h3 class="closing">Thank you for everything, Dilla. love U</h3>
-                <img src="/Dilla/Image/cloud.png" alt="cloud-3">
-                <img src="/Dilla/Image/mountain.png" alt="mountain-img">
-                <img src="/Dilla/Image/cloud.png" alt="cloud-4">
+                <img src="cloud.png" alt="cloud-3">
+                <img src="mountain.png" alt="mountain-img">
+                <img src="cloud.png" alt="cloud-4">
             </div> 
               
         </div>s
