--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Dilla is so cute</title>
         <!-- icon -->
-        <link rel="icon" href="/Dilla/Image/love.png">
+        <link rel="icon" href="love.png">
         <!-- css -->
         <link rel="stylesheet" href="Style.css">
 
